<resources>
    <string name="app_name">LVCreate</string>
    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="create_project">Create Project</string>
    <string name="fragment_view_videos">My Projects</string>
    <string name="view_videos">Videos</string>
    <string name="user_account">Profile</string>
    <string name="camera">Take\nImage</string>
    <string name="image">Choose\nImage</string>
    <string name="choose_video">Choose\nVideo</string>
    <string name="play_video">Play Video</string>
    <string name="add_audio">Add Audio</string>
    <string name="captured_image_name">Lokavidya</string>
    <string name="question">Write Question</string>
    <string name="storage_error">Storage can not be accessed</string>
    <string name="permission_storage_rationale">We need your permissions to save Projects and Videos on your phone</string>
    <string name="button_allow">Permission granted</string>
    <string name="button_deny">No</string>
    <string name="record_audio">Record</string>
    <string name="stop_record_audio">Stop</string>
    <string name="done">Done</string>
    <string name="retry">Retry</string>
    <string name="cannot_record">Cannot record while playing</string>
    <string name="cannot_play">Cannot play while recording</string>
    <string name="save_project">Save Project</string>
    <string-array name="tab_titles">
        <item>LVCreate</item>
        <item>Create Project</item>
        <item>My Projects</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_audio_record">Add Audio</string>
    <string name="title_activity_crop_image">Edit Image</string>
    <string name="projects">Projects</string>
    <string name="my_projects">My Projects</string>
    <string name="saved_projects">Saved Projects</string>
    <string name="saved_videos">Saved Videos</string>
    <string name="crop_image_activity_title">Edit Image</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="main_drawer_load">Load Image for cropping</string>
    <string name="main_drawer_open">Open navigation drawer</string>
    <string name="main_drawer_close">Close navigation drawer</string>
    <string name="main_action_crop">CROP</string>
    <string name="main_action_rotate">Rotate 90 degrees clockwise</string>
    <string name="drawer_option_title">Crop View Presets</string>
    <string name="drawer_option_oval">Circular</string>
    <string name="drawer_option_rect">Rectangular</string>
    <string name="drawer_option_min_max">Min/Max limits override</string>
    <string name="drawer_option_customized_overlay">Customized Overlay</string>
    <string name="drawer_option_scale_center">Scale Center Inside</string>
    <string name="drawer_option_title2">Customization Toggles</string>
    <string name="drawer_option_toggle_scale">Image Scale: %1s</string>
    <string name="drawer_option_toggle_shape">Crop Shape: %1s</string>
    <string name="drawer_option_toggle_guidelines">Guidelines: %1s</string>
    <string name="drawer_option_toggle_aspect_ratio">Aspect Ratio: %1s</string>
    <string name="drawer_option_toggle_auto_zoom">Auto zoom: %1s</string>
    <string name="drawer_option_toggle_max_zoom">Max zoom level: %1s</string>
    <string name="drawer_option_set_initial_crop_rect">Set initial crop rectangle</string>
    <string name="drawer_option_reset_crop_rect">Reset crop rectangle to initial</string>
    <string name="drawer_option_toggle_multitouch">Multitouch: %1s</string>
    <string name="drawer_option_toggle_show_overlay">Show Overlay: %1s</string>
    <string name="drawer_option_toggle_show_progress_bar">Show Progress Bar: %1s</string>
    <string name="result_image_desc">hello resource</string>
    <string name="crop_failed">Cropping Image Failed</string>
    <string name="image_load_failed">Failed to load Image</string>
    <string name="answer_option">Answer Option</string>
    <string name="delete_button">X</string>
    <string name="add_option">+</string>
    <string name="file_copy_title">File copy</string>
    <string name="please_wait">Please Wait</string>
    <string name="processing_image">Processing Image</string>
    <string name="title_activity_upload_video">Upload Video</string>
    <string name="skip">Skip</string>
    <string name="description">description</string>
    <string name="language">language</string>
    <string name="tags">Enter only 50 tags</string>
    <string name="video_name">Video Name</string>
    <string name="project_string">Projects</string>
    <string name="loading">Hold on!</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_splash_it">SplashIt</string>
    <string name="title_activity_video_player">View Video</string>
    <string name="project_title">Add project title</string>
    <string name="undo">Undo</string>
    <string name="wrongBuddy">The operation is not completed.</string>
    <string name="gimmeAudio">Audio record feature can only be used if Microphone permission is granted</string>
    <string name="gimmeCamera">Camera access is required for taking pictures</string>
    <string name="noCameraFound">No camera found on this device</string>
    <string name="cameraNotAvailable">Could not access camera, is any other application using it?</string>
    <string name="gimmeStorage">Lokavidya requires storage permission to function correctly</string>
    <string name="otpVerification">Verifying OTP</string>
    <string name="invalidOTP">Invalid OTP</string>
    <string name="otpVerified">OTP Verified</string>
    <string name="gimmeSMS">Permission to receive SMS is required to automatically read OTP</string>
    <string name="cannotGenOTP">Could not generate OTP, please try again in some time.</string>
    <string name="signIn">Sign In to upload your projects.</string>
    <string name="cannotSignIn">An error occured while signing out</string>
    <string name="loggedOut">Successfully logged out</string>
    <string name="network_signIn">An error occurred while signing in. Please check your network connection</string>
    <string name="mobileSignedSuccess">Successfully signed in with user mobile number :</string>
    <string name="emailSignedSuccess">Successfully signed in with Email ID :</string>
    <string name="projectSaved">Project Uploaded successfully</string>
    <string name="couldntUpload">Could not upload project. Please check your network connection.</string>
    <string name="videoCompleted">Video play completed</string>
    <string name="videoError">Video play error</string>
    <string name="selected">Selected :</string>
    <string name="wrongWhileSaving">Something went wrong while saving project :(</string>
    <string name="childPosition">Clicked Position:</string>
    <string name="cannotUndo">You have reached the origin the file.</string>
    <string name="networkConnect">Check your internet connectivity.</string>
    <string name="imagePermissiondenied">Cancelling, required permissions are not granted</string>
    <string name="create_and_share">Create and Share</string>
    <string name="timer_null_text">"--:--"</string>
    <string name="download">Download</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="projectDesc">See your created videos and projects.</string>
    <string name="videoDesc">Create videos and share them with hundreds of other users.</string>
    <string name="pause">Pause</string>
    <string name="title_activity_sign_in_mark2">SignInMark2</string>
    <string name="existing_lokavidya_user">EXISTING LOKAVIDYA USER</string>
    <string name="new_user">NEW USER</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="enter_email">Enter Email</string>
    <string name="or">OR</string>
    <string name="enter_phone_no">Enter Phone No.</string>
    <string name="_91">+91</string>
    <string name="next">NEXT</string>
    <string name="project_saved_successfully">Project saved successfully</string>
    <string name="project_discarded">Project discarded</string>
    <string name="select_a_method">Select a method</string>
    <string name="gallery">Gallery</string>
    <string name="select_camera">Camera</string>
    <string name="add_naudio">Add  \nAudio</string>
    <string name="add_nimage">Add  \nImage</string>
    <string name="add_nvideo">Add  \nVideo</string>
    <string name="add_nquestion">Add  \nQuestion</string>
    <string name="phoneNo">phoneNo</string>
    <string name="email">email</string>
    <string name="registrationData">registrationData</string>
    <string name="registrationType">registrationType</string>
    <string name="otp">otp</string>
    <string name="title_activity_main_mark2">MainActivityMark2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_question_type_picker_dialog">QuestionTypePickerDialog</string>
</resources>
