<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:weightSum="1"
    tools:context=".activity.SignUpOrSignIn">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_account"
        android:layout_gravity="center_horizontal"
        android:paddingTop="40dp"
        android:textSize="22sp"
        android:textColor="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/enter_email"/>

        <EditText
            android:id="@+id/email_id_edit_text"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/sysLtGray"
            android:paddingLeft="10dp"
            android:hint="abc@xyz.com"/>

    </LinearLayout>

    <LinearLayout
        android:paddingTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/sysLtGray"
            android:layout_weight="0.3"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_weight="0.1"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/sysLtGray"
            android:layout_weight="0.3"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/enter_phone_no"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/_91"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:background="@color/sysLtGray" />

            <EditText
                android:id="@+id/phone_number_edit_text"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/sysLtGray"
                android:paddingLeft="10dp"
                android:hint="x x x x x x x x x x"
                android:textSize="20sp"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

</LinearLayout>