<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/time_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:textAlignment="center"
        android:paddingTop="@dimen/time_padding"
        android:paddingBottom="@dimen/time_padding"
        android:text="00:00"
        android:background="@color/colorAccentLight"
        android:textSize="@dimen/time"
        />
    <View
        android:id="@+id/view_center"
        android:layout_width="0.1dp"
        android:layout_height="0.1dp"
        android:layout_centerInParent="true"/>
    <ImageView
        android:id="@+id/selected_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/time_display"
        android:layout_alignBottom="@id/view_center"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:background="@android:color/black"
        />
    <ImageButton
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/selected_image"
        android:layout_alignLeft="@id/selected_image"
        android:src="@drawable/ic_play_arrow_black_24dp"
        android:background="?android:attr/colorButtonNormal"/>

    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/audio_seek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_alignBottom="@+id/play_button"
        android:layout_toRightOf="@+id/play_button"
        android:layout_alignRight="@+id/selected_image"
        android:layout_alignEnd="@+id/selected_image" />
    <Button
        android:id="@+id/record_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_audio"
        android:layout_below="@id/play_button"
        android:layout_alignLeft="@id/play_button"/>
    <Button
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_record_audio"
        android:layout_below="@id/play_button"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_audio"
        android:layout_below="@id/play_button"
        android:layout_alignRight="@id/selected_image"/>

    <Button
        android:id="@+id/done_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_margin="@dimen/fab_margin"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>