<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/create_videos_fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/create_videos_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                >

                <TextView
                    android:id="@+id/project_name_display"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccentLight"
                    android:padding="10dp"
                    android:hint="@string/project_title"
                    android:layout_marginBottom="5dp"/>

                <EditText
                    android:id="@+id/project_name"
                    android:hint="@string/project_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccentLight"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:visibility="gone"
                    android:layout_marginBottom="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <Button
                                android:id="@+id/image_picker"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?android:attr/selectableItemBackground"
                                android:text="@string/image"
                                android:textAllCaps="false"
                                android:paddingTop="@dimen/picker_padding"
                                android:paddingBottom="@dimen/picker_padding"
                                android:textColor="@android:color/white"/>

                            <View
                                android:layout_width="@dimen/segment_width"
                                android:layout_height="@dimen/segment_height"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:background="@android:color/white" />
                        </RelativeLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <Button
                                android:id="@+id/camera_image_picker"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?android:attr/selectableItemBackground"
                                android:text="Add \nAudio"
                                android:textAllCaps="false"
                                android:paddingTop="@dimen/picker_padding"
                                android:paddingBottom="@dimen/picker_padding"
                                android:textColor="@android:color/white"/>
                            <!--
                                                    <View
                                                        android:layout_width="@dimen/segment_width"
                                                        android:layout_height="@dimen/segment_height"
                                                        android:layout_alignParentLeft="true"
                                                        android:layout_centerVertical="true"
                                                        android:background="@android:color/black" />-->
                        </RelativeLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <Button
                                android:id="@+id/video_picker"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?android:attr/selectableItemBackground"
                                android:text="@string/choose_video"
                                android:textAllCaps="false"
                                android:paddingTop="@dimen/picker_padding"
                                android:paddingBottom="@dimen/picker_padding"
                                android:textColor="@android:color/white"/>


                            <View
                                android:layout_width="@dimen/segment_width"
                                android:layout_height="@dimen/segment_height"
                                android:layout_alignParentLeft="true"
                                android:layout_centerVertical="true"
                                android:background="@android:color/white" />
                        </RelativeLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <Button
                                android:id="@+id/question_picker"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?android:attr/selectableItemBackground"
                                android:text="@string/question"
                                android:textAllCaps="false"
                                android:paddingTop="@dimen/picker_padding"
                                android:paddingBottom="@dimen/picker_padding"
                                android:textColor="@android:color/white"/>

                            <View
                                android:layout_width="@dimen/segment_width"
                                android:layout_height="@dimen/segment_height"
                                android:layout_alignParentLeft="true"
                                android:layout_centerVertical="true"
                                android:background="@android:color/white" />

                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>

                <com.wang.avi.AVLoadingIndicatorView
                    android:id="@+id/loading_animation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    style="@style/AVLoadingIndicatorView"
                    android:visibility="gone"
                    app:indicatorName="BallTrianglePathIndicator"
                    app:indicatorColor="@color/colorAccent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/slides_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>

            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/touch_interceptor"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>
</FrameLayout>
